# rrub

./: .gitignore  Cargo.toml  test.sh  x86_64-baremetal.json
old/: filesystem.rs  mem.rs  serial.rs  serial_uefi.rs
old/loaders/linux/: common.rs  x86.rs
old/mem/: elf.rs  jump.rs  jump.s
rrub/: .gitignore  Cargo.toml  default.toml  rrub.json  test.sh
rrub-stage1/: notes.txt  test.sh
rrub-stage1/src/: stage1.asm
rrub/.cargo/: config.toml
rrub/src/: display.rs  error.rs  firmware.rs  framebuffer.rs  main.rs  mem.rs  panic_handler.rs  parser.rs  scheduler.rs  shell.rs  usb.rs
rrub/src/display/: bios_vesa.rs  efi_fb.rs
rrub/src/firmware/: filesystem.rs  framebuffer.rs  input.rs  logger.rs  memory.rs  u_efi.rs
rrub/src/firmware/bios/: vga.rs
rrub/src/firmware/u_efi/: gop.rs  input.rs  logger.rs  mem.rs  panic.rs
rrub/src/framebuffer/: vga.rs
rrub/src/loaders/: linux.rs
rrub/src/loaders/linux/: x86.rs
rrub/src/mem/: e820.rs  elf.rs  mem_uefi.rs
rrub/src/usb/: usb_uefi.rs
src/: config.rs  display.rs  error.rs  framebuffer.rs  loaders.rs  main.rs  mem.rs  panic_handler.rs  scheduler.rs  serial.rs  shell.rs  usb.rs
src/framebuffer/: fb_uefi.rs
src/mem/: mem_uefi.rs
src/serial/: serial_uefi.rs
src/usb/: hid.rs  keymaps.rs
