[package]
name = "rrub"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
log = "0.4.27"
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.12", default-features = false }
uefi = { version = "0.35.0", features = ["panic_handler", "alloc", "global_allocator"] }
zerocopy = { version = "0.8.26", features = ["derive"], default-features = false }

[toolchain]
targets = ["aarch64-unknown-uefi", "x86_64-unknown-uefi"]
