[package]
name = "rrub"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9.4", default-features = false }
embedded-graphics = { version = "0.8.1", default-features = false }
embedded-layout = "0.4.2"
uefi = { version = "0.36.1", features = ["alloc", "unstable"], default-features = false}
uefi-raw = "0.13.0"
zerocopy = { version = "0.8.26", features = ["derive"], default-features = false }
simple_alloc = { path= "../simple_alloc" }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
log = "0.4.28"

[features]
default = ["uefi"]
uefi = []
bios = []
